<resources>
    <string name="app_name">R-Collect</string>
    <string name="bank_name"> RIVIRESA NIDHI LTD </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="agent_id">Agent ID </string>
    <string name="agent_name">Agent Name :</string>
    <string name="name"> Name </string>
    <string name="mobile"> Mobile </string>
    <string name="deposit_amount"> Deposit Amount </string>
    <string name="cash_deposit"> Cash Deposit</string>
    <string name="balance_enquiry"> Balance Enquiry</string>
    <string name="mini_statement"> Mini Statement</string>
    <string name="center_creation">Center Creation</string>
    <string name="jlg_split_transactions">JLG SPLIT TRANSACTIONS</string>
    <string name="jlg_split_closing">JLG SPLIT CLOSING</string>
    <string name="daily_report"> Daily Report</string>
    <string name="date_to_date_report"> Date-To-Date Report</string>
    <string name="change_password"> Change Password</string>
    <string name="daily_collection_report"> Daily collection report</string>
    <string name="transfer">Transfer</string>
    <string name="cash_withdrawal"> Cash Withdrawal</string>
    <string name="confirmation"> Please confirm below details </string>
    <string name="account_number"> Account Number </string>
    <string name="customer_id"> Customer ID </string>
    <string name="scheme_name"> Scheme Name </string>
    <string name="scheme_code"> Scheme Code </string>
    <string name="scheme_category"> Scheme Category </string>
    <string name="group_code"> Group Code </string>
    <string name="center_code"> Center Code </string>
    <string name="center_name"> Center Name </string>
    <string name="Phone"> Phone number </string>
    <string name="thank_you"> Thank you for Banking with us.. keep Smiling :) </string>
    <string name="current_balance"> Current Balance </string>
    <string name="deposited_amount"> Deposited Amount </string>
    <string name="previous_balance"> Previous Balance </string>
    <string name="transaction_no"> Transaction No </string>
    <string name="account_status"> Account Status </string>
    <string name="id_proof_number"> ID Proof Number</string>
    <string name="enter_account_name">Enter Account Name</string>
    <string name="menu_home">Home</string>
    <string name="jlg_split_transaction">JLG Split Transaction</string>
    <string name="customers_created">Customers Created</string>
    <string name="accounts_created">Accounts Created</string>
    <string name="total_amount_of_transfers">Total Amount of Transfers</string>
    <string name="number_of_transfer">Number of Transfers</string>
    <string name="total_amount_of_withdrawal">Total Amount of Withdrawal</string>
    <string name="number_of_withdrawals">Number of Withdrawals</string>
    <string name="total_amount_of_deposit">Total Amount Of Deposit</string>
    <string name="number_of_deposit_collected">Number Of Deposit Collected</string>
    <string name="date_and_time">Date and Time</string>
    <string name="dob">Date of Birth</string>
    <string name="date">Date</string>
    <string name="branch_name">Branch Name</string>
    <string name="branch">Branch</string>
    <string name="loan_type">Loan Type</string>
    <string name="roi">ROI</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="effective_date">Effective Date</string>
    <string name="sub_transaction_type">Sub-Transaction Type</string>
    <string name="group_account_number">Group Account Number</string>
    <string name="scheme">Scheme</string>
    <string name="due_date">Due Date</string>
    <string name="loan_date">Loan Date</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="branch_code">Branch Code</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general_details">General Details</string>
    <string name="remittance_details">Remittance Details</string>
    <string name="other_details">Other Details</string>
    <string name="select_group">Select Group</string>
    <string name="loan_details">Loan Details</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="maker_id">Maker ID</string>
    <string name="making_time">Making Time</string>
    <string name="enter_customer_id">Enter Customer ID</string>
    <string name="create_group">create group</string>
    <string name="group_name">Group Name</string>
    <string name="function_all">Comprehensive Test</string>
    <string name="function_qrcode">QR Code</string>
    <string name="function_barcode">Bar Code</string>
    <string name="function_text">Text</string>
    <string name="function_tab">Form</string>
    <string name="function_pic">Picture</string>
    <string name="function_multi">Multi Threading</string>
    <string name="function_threeline">Paper Feed</string>
    <string name="function_buffer">Transaction Print</string>
    <string name="function_blackline">Black Label</string>
    <string name="function_cash">Cash Test</string>
    <string name="function_lcd">Lcd Test</string>
    <string name="function_status">Status</string>
    <string name="function_label">Label Test</string>
    <string name="setting_title">Setting</string>
    <string name="info_title">PrinterInformation</string>
    <string name="qr_title">Qr Test</string>
    <string name="barcode_title">BarCode Test</string>
    <string name="text_title">Text Test</string>
    <string name="bitmap_title">Picture Test</string>
    <string name="tab_title">Form Test</string>
    <string name="all_title">Comprehensive Test</string>
    <string name="buffer_title">Transaction Test</string>
    <string name="blackline_title">Black Label Test</string>
    <string name="lcd_title">Lcd Test</string>
    <string name="label_title">Label Test</string>
    <string name="printer_serial_num">serial number</string>
    <string name="printer_model">printer model</string>
    <string name="printer_head">printer head</string>
    <string name="printer_firmware">printer firmware version</string>
    <string name="printer_head_size">priner head size</string>
    <string name="printer_distance">printed distance</string>
    <string name="printer_version">service version</string>
    <string name="printer_dev_version">development version</string>
    <string name="enter_work">Enter Transaction</string>
    <string name="exit_work">Exit Transaction</string>
    <string name="start_work">Start Transaction</string>
    <string name="start_work_low">Start Printing</string>
    <string name="over_work">End Transaction</string>
    <string name="error_work">Exception Occurred</string>
    <string name="print_baidu_ticket">Print Baidu ticket</string>
    <string name="print_meituan_ticket">Print Meituan ticket</string>
    <string name="print_eleme_ticket">Print Eleme ticket</string>
    <string name="print_koubei_ticket">Print Koubei ticket</string>
    <string name="print_interval_black">Print Interval Black</string>
    <string name="print_black">Print Black</string>
    <string name="print">Print</string>
    <string name="printing">Printing~~~</string>
    <string name="input_barcode">Please input barcode content</string>
    <string name="content_barcode">barcode</string>
    <string name="encode_barcode">barcode encode</string>
    <string name="no_print">text null</string>
    <string name="barcode_up">upon barcode</string>
    <string name="barcode_down">beneath barcode</string>
    <string name="barcode_updown">up and beneath</string>
    <string name="text_position">HRI position</string>
    <string name="barcode_height">height</string>
    <string name="barcode_width">width</string>
    <string name="content_qrcode">qrcode</string>
    <string name="input_qrcode">Please input QrCode content</string>
    <string name="array_qrcode">arrangemant</string>
    <string name="size_qrcode">QR-Code size</string>
    <string name="error_qrcode">error correctionlevel </string>
    <string name="upload_info">Upload Printer Info</string>
    <string name="characterset">char set</string>
    <string name="connect_method">connect method</string>
    <string name="size_paper">paper size</string>
    <string name="size_text">text size</string>
    <string name="type_text">text typeface</string>
    <string name="bold_text">bold</string>
    <string name="underline_text">underline</string>
    <string name="print_density">printer density</string>
    <string name="add_line">add</string>
    <string name="content_form">content</string>
    <string name="weight_form">weight%</string>
    <string name="align_form">align</string>
    <string name="align_left">left</string>
    <string name="align_mid">middle</string>
    <string name="align_right">right</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="about">about</string>
    <string name="single">single</string>
    <string name="twice">double</string>
    <string name="connect_service">Connect</string>
    <string name="disconnect_service">Disconnect</string>
    <string name="input_order">input epson command:</string>
    <string name="multithread">multithread</string>
    <string name="multithread_stop">stop</string>
    <string name="pic_pos">picture arrangement mode</string>
    <string name="pic_hor">transverse</string>
    <string name="pic_ver">portrait</string>
    <string name="pic_mode">picture printing method</string>
    <string name="pic_mode1">raster bitmap</string>
    <string name="pic_mode2">8 point single density</string>
    <string name="pic_mode3">8 point double density</string>
    <string name="pic_mode4">24 point single density</string>
    <string name="pic_mode5">24 point double density</string>
    <string name="style_width">times width</string>
    <string name="style_height">times height</string>
    <string name="buffer_info1">Event Print: Controls the print of each order for print status\nIn the process of printing a single transaction, if there is an out-of-paper abnormalities, after the paper state is restored, you can choose to reprint a single.</string>
    <string name="buffer_info2">Step1:start event print model\nStep2:add an event\nStep3:quit event print model</string>
    <string name="bl_info1">Color requirements: reflectivity does not exceed 6%, infrared wavelength 700-1000nm range.</string>
    <string name="bl_info2">Position requirements:Black label needs to be in the middle of the paper level sensor can be detected.</string>
    <string name="bl_info3">Detection of black label: The printer will feed the paper (up to 600mm)to detect the black label</string>
    <string name="bl_set">Black label setting</string>
    <string name="bl_check">Black label checking</string>
    <string name="bl_sample">Black label sample</string>
    <string name="display_text">display a line</string>
    <string name="display_texts">display lines</string>
    <string name="display_pic">display picture</string>
    <string name="label_print_one">print one label</string>
    <string name="label_print_more">print multi label</string>
    <string name="label_info">Sunmi label printing function now only supports handheld V2 and v2pro
        devices. Please consult the supplier before use！</string>
</resources>